Change the files having p1 to index

--- a/Interests.html
+++ b/Interests.html
@@ -13,7 +13,7 @@
 <header>
 	<ul class="back">
 		<li>
-			<a href="p1.html">
+			<a href="index.html">
 			<img class="backhead" src="backhead.png">
 			Back to Home Page</a>
 		</li>
