--- a/GeneralInfo.html
+++ b/GeneralInfo.html
@@ -12,7 +12,7 @@
 <header>
 	<ul class="back">
 		<li>
-			<a href="p1.html">
+			<a href="index.html">
 			<img class="backhead" src="backhead.png">
 			Back to Home Page</a>
 		</li>
