--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<a class="info" href="Academics.html">Academics</a>
 	<a class="info" href="Interests.html">Interests</a>
 	
-	<a class="info" href="Contact.html">Contact Me</a>	
+	<a class="info" href="contact.html">Contact Me</a>	
 	
 	<br>
 
